--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <proc>none</proc>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
